Upgrade JIT 2.0 schema; update complex validations, on carrierCode, to reflect new conditions. Apply PR suggestions.